# torch-devcontainer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  container.sh  docker-compose.yml  example.ipynb  main.py  pyproject.toml  requirements.txt  setup_env.sh
.devcontainer/: Dockerfile  apt.conf  devcontainer.json  devcontainer.template.json  docker-compose.extend.yml
csrc/: kernel.cu  kernel.cuh  module.cc  utils.h
example/: __main__.py  libops.pyi
